// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons: Button: Props Buttons: Button: [ prop: buttonStyle ] enzyme-shallow: snapshot: Buttons: Button: [ prop: buttonStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": undefined,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
          "padding": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: clear ] enzyme-shallow: snapshot: Buttons: Button: [ prop: clear ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderRadius": 3,
          "boxShadow": "
        0 0px 0px 0px rgba(0, 0, 0, 0),
        0 0px 0px 0px rgba(0, 0, 0, 0)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#071",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        button text
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: containerStyle ] enzyme-shallow: snapshot: Buttons: Button: [ prop: containerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#071",
      "borderRadius": 30,
      "justifyContent": "center",
      "padding": 20,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: icon ] enzyme-shallow: snapshot: Buttons: Button: [ prop: icon ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "marginHorizontal": 5,
          }
        }
      >
        <Icon
          color="#fff"
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: iconContainerStyle ] enzyme-shallow: snapshot: Buttons: Button: [ prop: iconContainerStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "borderWidth": 2,
            "marginHorizontal": 5,
          }
        }
      >
        <Icon
          color="#fff"
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: iconRight ] enzyme-shallow: snapshot: Buttons: Button: [ prop: iconRight ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
      <View
        style={
          Object {
            "marginHorizontal": 5,
          }
        }
      >
        <Icon
          color="#fff"
          name="pets"
          raised={false}
          reverse={false}
          reverseColor="white"
          size={24}
          underlayColor="white"
        />
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: loading ] enzyme-shallow: snapshot: Buttons: Button: [ prop: loading ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="small"
        style={
          Object {
            "padding": 8,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: loadingProps ] enzyme-shallow: snapshot: Buttons: Button: [ prop: loadingProps ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#1976D2"
        hidesWhenStopped={true}
        size="large"
        style={
          Object {
            "padding": 8,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: loadingStyle ] enzyme-shallow: snapshot: Buttons: Button: [ prop: loadingStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="white"
        hidesWhenStopped={true}
        size="small"
        style={
          Object {
            "marginRight": 50,
            "opacity": 0.2,
            "padding": 8,
          }
        }
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: noProps ] enzyme-shallow: snapshot: Buttons: Button: [ prop: noProps ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: onPress ] enzyme-shallow: snapshot: Buttons: Button: [ prop: onPress ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        Welcome to
React Native Elements
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: text ] enzyme-shallow: snapshot: Buttons: Button: [ prop: text ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        text prop
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: textProps ] enzyme-shallow: snapshot: Buttons: Button: [ prop: textProps ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          Object {
            "color": "white",
            "fontSize": 16,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        button\\ntext
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Buttons: Button: Props Buttons: Button: [ prop: textStyle ] enzyme-shallow: snapshot: Buttons: Button: [ prop: textStyle ] enzyme-shallow: snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 30,
      "justifyContent": "center",
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "borderRadius": 3,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#2089dc",
          "borderRadius": 3,
          "boxShadow": "
        0 3px 4px 0px rgba(0, 0, 0, 0.14),
        0 3px 3px -2px rgba(0, 0, 0, 0.2)
      ",
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontFamily": "Courier New",
            "fontSize": 32,
            "padding": 8,
            "textAlign": "center",
          }
        }
      >
        button text
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
